Fix text align in leaderboard

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -37,6 +37,7 @@
 }
 
 .leaderboard-list {
+  text-align: left;
   padding-left: 15px;
 }
 
